// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render button as first element 1`] = `
.c0.c0.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 11px 18px 11px 18px;
  background-color: blue;
  font-size: 18px;
  color: white;
  border-radius: 20px;
  margin-top: 0px;
  font-family: Helvetica;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  cursor: pointer;
  z-index: 10;
  position: relative;
}

.c0.c0.c0:hover {
  opacity: 0.8;
}

<div
  className="c0"
  onClick={[Function]}
>
  A button
</div>
`;

exports[`render button not as first element 1`] = `
.c0.c0.c0 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  padding: 11px 18px 11px 18px;
  background-color: blue;
  font-size: 18px;
  color: white;
  border-radius: 20px;
  margin-top: 6px;
  font-family: Helvetica;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  cursor: pointer;
  z-index: 10;
  position: relative;
}

.c0.c0.c0:hover {
  opacity: 0.8;
}

<div
  className="c0"
  onClick={[Function]}
>
  A button
</div>
`;
